# KD0YW

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: audio.py  config.py  main.py
backend/app/plugins/: __init__.py  base.py  broadcastify.py  local_file.py  manager.py  rtl_sdr.py
backend/tests/: test_integration.py  test_plugins.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: StreamPlayer.tsx
