[tool.poetry]
name = "scannerforge-backend"
version = "0.1.0"
description = "Legal radio stream aggregator backend"
authors = ["ScannerForge Team <dev@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
aioredis = "^2.0.1"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
numpy = "^1.26.4"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
httpx = {extras = ["http2"], version = "^0.27.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
